sample-apps/php-hello-k8s/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-hello
  labels:
    app: php-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-hello
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-hello
        deployment: php-hello
    spec:
      containers:
        - name: php-hello
          image: >-
            changeme
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
